<resources>
    <string name="app_name">Librarian</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="faculty_options">
        <item>ICT</item>
        <item>Humanities</item>
        <item>Management Sciences</item>
    </string-array>
    <string name="title_placeholder">Title: %s</string>
    <string name="borrower_email_placeholder">Borrowers Email: %s</string>
    <string name="faculty_placeholder">Faculty: %s</string>
    <string name="year_of_study_placeholder">Year of Study: %s</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="staff_number">Staff Number</string>
    <string name="prompt_staff">Enter staff number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="acc">Don\'t have an Account? Register</string>
    <string name="prompt_surnmae">Enter Surname</string>
    <string name="prompt_name">Enter First Name</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_contact">Enter Contact Number</string>
    <string name="register_a_librarian">Register a Librarian</string>
    <string name="set_closing_time">Set Closing time</string>
    <string name="book_rent_out">Book Rent-Out</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="registration">Registration</string>
    <string name="librarian">Librarian</string>
    <string name="user">User</string>
    <string name="select_faculty_prompt">Select faculty</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_email">Send email</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="prompt_title">Enter book title</string>
    <string name="library_opening_and_closing_hours">Library Opening and Closing Hours</string>
    <string name="monday_friday">Monday - Friday:</string>
    <string name="opening_time_e_g_09_00_am">Opening Time (e.g., 09:00 AM)</string>
    <string name="closing_time_e_g_04_00_pm">Closing Time (e.g., 04:00 PM)</string>
    <string name="saturday">Saturday:</string>
    <string name="sunday">Sunday:</string>
    <string name="public_holidays">Public Holidays:</string>
    <string name="save_hours">Save Hours</string>
    <string name="view_all_available_books">View All available books</string>
    <string name="view_all_rented_books">View all Rented books</string>
    <string name="rent_existing_book">Rent existing book</string>
    <string name="enter_author_name">Enter author name</string>
    <string name="enter_shelf_no">Enter shelf No</string>
    <string name="request_a_book">Request a book</string>
    <string name="all_book_rented_by_user">All book rented by User</string>
    <string name="all_books_rented_by_the_user">All books rented by the user</string>
    <string name="add_book">Add Book</string>
    <string name="add_new_book">Add new book</string>
    <string name="book_title">Book Title</string>
    <string name="borrower_s_email">Borrower\'s Email</string>
    <string name="rent">Rent</string>
    <string name="rent_out_book">Rent-out book</string>
    <string name="check_availability">Check Availability</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="search_for_a_book_in_the_library">Search for a book in the library</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="enter_isbn">Enter isbn</string>
    <string name="prompt_year">Enter year of study(i.e 1st, 2nd, 3rd etce)</string>
    <string name="retrieve_books">Retrieve books</string>
    <string name="title">Title</string>
    <string name="all_books_rented_by">All books rented by:</string>
</resources>