<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FF9800"
        android:text="@string/registration"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_below="@id/title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        android:hint="@string/prompt_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_below="@id/name"
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_surnmae"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:layout_marginStart="35dp"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_below="@id/surname"
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_below="@id/mail"
        android:id="@+id/contactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_contact"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        />

    <EditText
        android:layout_below="@id/contactNumber"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_below="@id/password"
        android:id="@+id/c_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        />

    <Button
        android:layout_below="@id/c_password"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:text="@string/register"
        />
    <Button
        android:layout_below="@id/registerButton"
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:text="@string/already_registered_login"
        />

</RelativeLayout>