<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent_out_book"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textColor="#FF9800"
        android:id="@+id/tM"
        />
    <EditText
        android:layout_below="@id/tM"
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"
        android:background="@drawable/edt_style"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editBorrowerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/borrower_s_email"
        android:layout_marginStart="20dp"
        android:padding="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:layout_below="@id/editTitle"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edt_style"
        android:layout_below="@id/editBorrowerEmail"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRent"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_red_dark"/>
</RelativeLayout>