<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckAvailabilityActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_a_book_in_the_library"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/mt"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="#FF9800"
        />
    <EditText
        android:id="@+id/editTextBookTitle"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/mt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_style"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"
        android:hint="@string/enter_book_title"/>

    <Button
        android:id="@+id/buttonCheckAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextBookTitle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edt_style"
        android:text="@string/check_availability"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCheckAvailability"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
