<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="35sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textColor="#FF9800"
        android:text="@string/password_recovery"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_centerVertical="true"
        android:textColor="#000000"
        android:textColorHint="#5C6060"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:inputType="textEmailAddress"
        />

    <Button
        android:layout_below="@id/email"
        android:id="@+id/fButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edt_style"
        tools:ignore="RtlSymmetry"
        android:text="@string/send_email"
        />
</RelativeLayout>